<resources>
    <string name="app_name">Daily</string>
    <string name="your_task">Your Task</string>
    <string name="priority">Priority</string>
    <string name="enter_your_task_here">Enter your task here</string>
    <string name="important">Important</string>
    <string name="average">Average</string>
    <string name="unimportant">Unimportant</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="my_tasks">My Tasks</string>
</resources>