<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".AddTask">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/enter_your_task_here" />

        <EditText
            android:id="@+id/etNev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Description"
            android:hint="@string/enter_your_task_here"
            android:inputType="textMultiLine"
            android:minLines="6" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginEnd="20dp"
            android:text="@string/important" />

        <RadioButton
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/average" />

        <RadioButton
            android:id="@+id/unimportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unimportant" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="megsem"
            android:text="@string/cancel" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="clicked"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>